<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validation_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/validation_name_hint"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:boxStrokeWidth="1dp"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/validation_name_surname_edittext"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="@string/validation_name_hint"
                android:backgroundTint="@android:color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/phone_nr"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="28dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/phone_nr_hint"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:boxStrokeWidth="1dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/validation_phone_nr_edittext"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                style="@style/EditTextTheme"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0.8"
                android:text="@string/agree_terms_conditions"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/terms_conditions_switch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0.2"
                android:padding="16dp" />


        </LinearLayout>

        <Button
            android:id="@+id/validation_continue_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:textSize="20sp"
            app:cornerRadius="24dp"
            android:elevation="2dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/continua"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:onClick="startConfirm"/>

        <TextView
            android:id="@+id/validation_terms_conditions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/terms_conditions_link"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validation_continue_button" />

        <TextView
            android:id="@+id/validation_confidential_policy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/confidential_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validation_terms_conditions_text_view" />

        <TextView
            android:id="@+id/validation_gdpr_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/gdpr_text"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validation_confidential_policy_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>