<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width= "match_parent">
<androidx.constraintlayout.widget.ConstraintLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_child_name_input_layout"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/validation_name_hint"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_child_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@android:color/white"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/validation_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_child_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_child_name_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_child_child_name_inputLayout"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/validation_name_hint"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_child_child_name_editText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@android:color/white"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/validation_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_child_age"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_child_child_name_inputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_child_age_inputLayout"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/child_age_hint"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_child_age_editText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@android:color/white"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/child_age_hint"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/address_quetsion"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_child_age_inputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_child_address_inputLayout"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/adress_hint"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_child_address_editText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@android:color/white"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@string/adress_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        android:text="@string/add_child_cofirm_call"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_child_address_inputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>