<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.SettingsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/phone_nr_edit"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="28dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settings_phone_input_layout"
            style="@style/EditTextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview"
            app:boxStrokeWidth="1dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                style="@style/EditTextTheme"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/validation_terms_conditions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/terms_conditions_link"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_input_layout" />

        <TextView
            android:id="@+id/validation_confidential_policy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/confidential_text_view"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validation_terms_conditions_text_view" />

        <TextView
            android:id="@+id/validation_gdpr_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/gdpr_text"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validation_confidential_policy_text_view" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:elevation="2dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/validation_gdpr_text_view"
            android:backgroundTint="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>